# my-reporter

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-06.jsonl  2026-07-07.jsonl  2026-07-12.jsonl
src/myreporter/: __init__.py  cli.py  digest.py  reporter.py
tests/: conftest.py  test_cli.py  test_release_drift.py  test_reporter.py
